--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "toplan/phpsms": ">=1.6.0"
+        "toplan/phpsms": "1.6.1"
     },
     "autoload": {
         "classmap": [
